# dj-stripe

./: .gitignore  setup.cfg
djstripe/: __init__.py  checks.py  decorators.py  fields.py  mixins.py  models.py  settings.py  stripe_objects.py  views.py  webhooks.py
djstripe/migrations/: 0001_initial.py  0001_squashed_0007_for_custom_subscriber_model.py  0005_charge_captured.py  0009_auto_20160501_1838.py  0010_splitting_up_adds_from_alters.py  0012_model_sync.py  0018_field_docs.py  0028_auto_20170313_2316.py  0029_coupon.py  0030_rename__githubuser__to__user.py  0031_handle_3d_secure.py  0032_auto_20200506_1517.py
docs/: conf.py
