[metadata]
name = dj-stripe-isshub
version = 2.0
description = Django + Stripe Made Easy, Based on v1 of dj-stripe, adapted for isshub
author = Alexander Kavanaugh
author_email = alex@kavdev.io
url = https://github.com/kavdev/dj-stripe/
download_url = https://github.com/kavdev/dj-stripe/tarball/master
keywords = django, stripe, payments
classifiers =
	Development Status :: 4 - Beta
	Environment :: Web Environment
	Intended Audience :: Developers
	License :: OSI Approved :: BSD License
	Topic :: Office/Business :: Financial
	Programming Language :: Python :: 3 :: Only
	Programming Language :: Python :: 3
	Programming Language :: Python :: 3.4
	Programming Language :: Python :: 3.5
	Programming Language :: Python :: 3.6
	Programming Language :: Python :: 3.7
	Framework :: Django
	Framework :: Django :: 3

[options]
packages = find:
include_package_data = True
zip_safe = False
install_requires =
	django-model-utils==4.0
	django-polymorphic==2.1.2
	jsonfield==3.1.0
	pytz >= 2016.6.1
	stripe==1.53.0
	tqdm >= 4.8.4
	python-doc-inherit >= 0.3.0
	mock-django >= 0.6.10
	six

[options.packages.find]
exclude =
	docs
	tests
	tests.*

[bdist_wheel]
universal = 1
